--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,23 @@
         android:theme="@style/Theme.BMIcalculator"
         tools:targetApi="31">
         <activity
+            android:name=".Details"
+            android:exported="false" />
+        <activity
+            android:name=".Add"
+            android:exported="false" />
+        <activity
+            android:name=".Form"
+            android:exported="false" />
+        <activity
+            android:name=".SimpleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BMIActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".splash" -->
+        <!-- android:exported="false" /> -->
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
