--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:exported="false" /> <!-- <activity -->
         <!-- android:name=".splash" -->
         <!-- android:exported="false" /> -->
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
